# OpenGLNative

./: BasicLight.glsl  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jesen/openglnative/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JNIImpl.cpp
app/src/main/cpp/looper/: GLRenderLooper.cpp  GLRenderLooper.h  Looper.cpp  Looper.h
app/src/main/cpp/render/: BgRender.cpp  BgRender.h  EGLRender.cpp  EGLRender.h  MineGlRenderContext.cpp  MineGlRenderContext.h
app/src/main/cpp/sample/: AvatarSample.cpp  AvatarSample.h  BasicLightingSample.cpp  BasicLightingSample.h  BeatingHeartSample.cpp  BeatingHeartSample.h  BezierCurveSample.cpp  BezierCurveSample.h  BigEyesSample.cpp  BigEyesSample.h  BigHeadSample.cpp  BigHeadSample.h  BinaryProgramSample.cpp  BinaryProgramSample.h  BlendingSample.cpp  BlendingSample.h  BlitFrameBufferSample.cpp  BlitFrameBufferSample.h  CloudSample.cpp  CloudSample.h  ComputeShaderSample.cpp  ComputeShaderSample.h  ConveyorBeltExample.cpp  ConveyorBeltExample.h  CoordSystemSample.cpp  CoordSystemSample.h  CopyTextureExample.cpp  CopyTextureExample.h  DepthTestingSample.cpp  DepthTestingSample.h  FBOBlitSample.cpp  FBOBlitSample.h  FBOLegLengthSample.cpp  FBOLegLengthSample.h  FBOSample.cpp  FBOSample.h  FaceSlenderSample.cpp  FaceSlenderSample.h  GLSampleBase.h  GLTransitionExample.cpp  (+79 more)
app/src/main/cpp/util/: CommonDef.h  GLUtils.cpp  GLUtils.h  ImageDef.h  LockUtil.h  LogUtil.h
app/src/main/java/com/jesen/openglnative/: Constants.java  MainActivity.kt  MainRecyclerAdapter.kt  MineGLRender.kt  MineGLSurfaceView.kt  MineNativeRender.kt  OnItemClickListener.kt
app/src/main/java/com/jesen/openglnative/audio/: AudioCollector.kt
app/src/main/java/com/jesen/openglnative/egl/: EGLActivity.kt  NativeBgRender.kt  NativeEglRender.kt
app/src/main/java/com/jesen/openglnative/utils/: FileUtil.kt  LoadUtil.kt  PermissionHelper.kt
app/src/main/res/drawable/: ic_aspect_drawable.xml
app/src/main/res/layout/: activity_eglactivity.xml  activity_main.xml  sample_item_layout.xml  sample_select_layout.xml
app/src/main/res/menu/: menu_egl.xml  menu_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jesen/openglnative/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
